# media-manager-extension

./: .gitmodules  CMakeLists.txt  README.md  shared.cmake
doc/: Doxyfile.in  frontmatter.md  jsdoc.conf.in
extension/: CMakeLists.txt  api.js  capi-client-browser.cpp  capi-client-browser.h  capi-client-indexer.cpp  capi-client-indexer.h  capi-client-player.cpp  capi-client-player.h  common.cpp  common.h  mediamanager-extension.c  raw_message_interface.h  rpc.c  rpc.h
extension/tutorial/: Tutorial.md
packaging/: mediamanager-extension.spec
tests/: CMakeLists.txt  extension_test.c
tools/: js2c.sh
